WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44246
[JIT] fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.5/S15.3.5.3_A2_T6.html fails
https://bugs.webkit.org/show_bug.cgi?id=44246
Summary
[JIT] fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.5/S15....
David Kilzer (:ddkilzer)
Reported
2010-08-19 04:41:49 PDT
LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.5/S15.3.5.3_A2_T6.html passes using the JSC interpreter, but fails using the JSC JIT. --- a/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.5/S15.3.5.3_A2_T6-expected.txt +++ b/LayoutTests/fast/js/sputnik/Conformance/15_Native_Objects/15.3_Function/15.3.5/S15.3.5.3_A2_T6-expected.txt @@ -1,6 +1,6 @@ S15.3.5.3_A2_T6 -FAIL SputnikError: #1.1: O is not an object, throw a TypeError exception +PASS TEST COMPLETE
Attachments
Patch
(4.94 KB, patch)
2010-09-22 11:47 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2010-08-19 04:48:43 PDT
<
rdar://problem/8329005
>
Oliver Hunt
Comment 2
2010-09-22 11:47:10 PDT
Created
attachment 68405
[details]
Patch
Oliver Hunt
Comment 3
2010-09-22 11:59:47 PDT
Committed
r68060
: <
http://trac.webkit.org/changeset/68060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug